--- a/Project Plan A2.html
+++ b/Project Plan A2.html
@@ -24,42 +24,40 @@
 <h2>Group Number 12</h2>
 <p><strong>Members: </strong>James Shuttleworth, Yuvan Bernstein, Luke West, Kim Hardie</p>
 <h2>Goals</h2>
-<p>The main goal in redesigning this website is to raise awareness of the Barrier Reef Orchestra and what they do, which will hopefully lead to more people attending concerts and getting involved in the Orchestra itself.</p>
-
+<p>The main goal is to raise awareness of the Barrier Reef Orchestra and &nbsp;increase the number of people attending the concerts and getting involved in the Orchestra itself. The site should also help to increase the number of sponsors for the orchestra, and conductors showing interest in getting involved.</p>
 <h2>Success Evaluation</h2>
-<p> The success of the website will be evaluated from the amount of tickets sold via the Civic Theatre, as well as an increase in the number of applicants and benefactors. </p>
+<p> The success of the website will be evaluated from a count of the amount of tickets sold via the Civic Theatre, as well as an increase in the number of benefactors. An increase in the number of applicants to play in the orchestra will be counted and compared to previous months to measure any potential increase. Finally, a method for receiving feedback will be utilised and analysed in regards to what people want from the orchestra.</p>
 
 <h2>Target Audience</h2>
 
-<p> The site will be designed to appeal to a younger demographic of people, in particular; ages between 13 - 30. To attract people from this age group the site will have a simple look and feel to it. it will be easy to identify where information can be found. It will include interactive methods like hiding text and being able view the text by pressing a button that says more. It will not have large amounts of texts that may be hard on the eyes. It will also incorporate various images that will make the site look attractive and spunky for the targeted age group, without alienating the older demographic. </p>
+<p> The site will be designed to appeal to a younger demographic of people (both genders), in particular; ages between 13 - 30. To attract people from this age group the site will have a simple look and feel to it. it will be easy to identify where information can be found. It will include interactive methods like hiding text and being able to view the text by pressing a button that says more. It will not have large amounts of texts that may be hard on the eyes. It will also incorporate various images that will make the site look attractive and spunky for the targeted age group, without alienating the older demographic. </p>
 <h2>Content</h2>
 <p>-<b>Home</b><br>
 	-<b>Events</b> - Upcoming Events - Past Events - Rehearsal Schedule<br>
 	-<b>Contact Us</b> - Become a Member - Become a Player - Support Us<br>
 	-<b>About Us</b> - History - Special Guests - Life Members<br>
-	-<b>Gallery</b>
+	-<b>Gallery</b> - Hot Summer Night 2008 - Slavonic Swoon 2008 - Last Night of the proms 2009
 
 </p>
 <h2>Site Flowchart</h2>
-<p> ...</p>
+<p> <img src="FlowChartBROGrp12.jpg" width="1641" height="345" alt=""/></p>
 <h2>Project Links</h2>
 <ul>
-    <li><a href="http://trello.com/?" target="_blank">Trello board</a></li>
-    <li><a href="http://github.com/?" target="_blank">GitHub repository</a></li>
-    <li><a href="https://itatjcu.slack.com/archives/?" target="_blank">Slack group</a> (right-click on your Slack group
-        name and choose "Copy Link" to get this URL)</li>
+    <li><a href="https://trello.com/b/QHIm4E6D/group-12-barrier-reef-orchestra" >Team 12 Trello board</a></li>
+    <li><a href="https://github.com/nishiluke/Group-12-Barrier-Reef-Orchestra" >Team 12 GitHub repository</a></li>
+    <li><a href="https://itatjcu.slack.com/archives/cp1406-2016-team-12" >Team 12 Slack Channel</a> </li>
 </ul>
 <h2>Comps</h2>
 <p>provide links here to your 2 comps (images or Web pages)</p>
 <ul>
-    <li>...</li>
-    <li>...</li>
+    <li><a href="BROHome.jpg"> Home Page</a></li>
+    <li><a href="BROAboutus.jpg"> About Us Page</a></li>
 </ul>
 <h2>Developed Pages</h2>
 <p>provide a link here to your developed pages</p>
 <ul>
-    <li>...</li>
-    <li>...</li>
+    <li><a href="index.html"> Home Page</a></li>
+    <li><a href="aboutus.html"> About Us Page</a></li>
 </ul>
 
 </body></html>
