--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@ image5.src = "images/slide5.jpg"
 	<header>
     <!--HEADER-->
     <div id="logo"> <img src="images/logo.png"></div>
-	<div id="background">
     <div id="navwrapper">
-	<a id="navButton" href="index.html">Home</a>
+	<div class="dropdown">
+    	<a id="navButton" href="index.html">Home</a>
+    </div>
     <div class="dropdown">
 		<a  id="navButton" href="#">Events</a>
 		<div class="dropdown-content">
@@ -43,13 +44,14 @@ image5.src = "images/slide5.jpg"
     <div class="dropdown">
 		<a  id="navButton" href="aboutus.html">About us</a>
 		<div class="dropdown-content">
-			<a href="people.html">History</a>
-			<a href="contact.html">Special guests</a>
-			<a href="contact.html">Live members</a>
+			<a href="history.html">History</a>
+			<a href="specialguests.html">Special guests</a>
+			<a href="lifemembers.html">Life members</a>
 		</div>
 	</div>
-	<a id="navButton" href="#">Gallery</a>    
-    </div>
+    <div class="dropdown">
+		<a  id="navButton" href="aboutus.html">Gallery</a>
+	</div>
     </div>
     </header>
     <div id="bannerwrapper">
@@ -73,6 +75,11 @@ image5.src = "images/slide5.jpg"
 	
 <div id="mainwrapper">
   <section id="maincontent">
+<section id="SideMenuBar">
+  <!-- Facebook Plugin-->
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+</section>
+<section id="ContentText">
 	<!--CONTENT-->
 	<h1>News</h1>
 	<h2>Upcoming events</h2>
@@ -132,14 +139,13 @@ image5.src = "images/slide5.jpg"
     </a>
 <!-- Javascript from W3 Schools Tutorial--->
     <div id="ReadMoreText" style="display:none;">
-        <p>Content goes here.
-    
-    An outstanding performance of Beethoven’s 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe’s Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra’s willingness to embrace mainstream classical repertoire as well as opportunities for collaboration.	</p>
+        <p>An outstanding performance of Beethoven’s 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe’s Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra’s willingness to embrace mainstream classical repertoire as well as opportunities for collaboration.	</p>
 
 	<p>In 2015 the orchestra has been invited to perform in three festivals, and features in the Townsville Civic Theatre season. This is a first for the orchestra - underscoring its value to the community and highlighting its continued prominence in the cultural soundscape of North Queensland. </p>
+    </div>
+    </section>
     </section>
     </div>
-</div>
     
     <footer>
     <!--FOOTER-->
