fixing uploaded pages
added a few things

--- a/gallery_instruments.html
+++ b/gallery_instruments.html
@@ -38,11 +38,12 @@
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="aboutus.html">Gallery</a>
+		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
 		<div class="dropdown-content">
-			<a href="people.html">History</a>
-			<a href="contact.html">Special guests</a>
-			<a href="contact.html">Life members</a>
+			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_hotsummernight.html">Hot summer nights</a>
+			<a href="gallery_lastnightofproms.html">Last night of proms</a>
+			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
 		</div>
 	</div>
     </div>
@@ -134,7 +135,6 @@
     <img src="images/sponsor13.jpg">
     <img src="images/sponsor14.jpg">
     <img src="images/sponsor15.jpg">
-    <img src="images/sponsor16.jpg">
     
 </div>
 </div>
