--- a/gallery_slavonicswoon.html
+++ b/gallery_slavonicswoon.html
@@ -38,11 +38,12 @@
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="aboutus.html">Gallery</a>
+		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
 		<div class="dropdown-content">
-			<a href="people.html">History</a>
-			<a href="contact.html">Special guests</a>
-			<a href="contact.html">Life members</a>
+			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_hotsummernight.html">Hot summer nights</a>
+			<a href="gallery_lastnightofproms.html">Last night of proms</a>
+			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
 		</div>
 	</div>
     </div>
@@ -88,19 +89,22 @@
     <div id="footerBkg">
 	
 	<div id="sponsors">
-    <br>
-    
-    <img src="images/sponsor1.jpg"height="50"width="100">
-    <img src="images/sponsor2.jpg"height="50"width="100">
-	<img src="images/sponsor3.jpg"height="50"width="100">
-    <img src="images/sponsor4.jpg"height="50"width="300">
-    <img src="images/sponsor5.jpg"height="50"width="80">
-    <img src="images/sponsor6.jpg"height="50"width="100">
-    <img src="images/sponsor7.jpg"height="50"width="100">
-    <img src="images/sponsor8.jpg"height="50"width="100">
-    <img src="images/sponsor9.jpg"height="50"width="100">
-    <img src="images/sponsor10.jpg"height="50"width="50">
-    <img src="images/sponsor11.jpg"height="50"width="150">
+    <h1>Sponsors:</h1>
+    <img src="images/sponsor1.jpg">
+    <img src="images/sponsor2.jpg">
+	<img src="images/sponsor3.jpg">
+    <img src="images/sponsor4.jpg">
+    <img src="images/sponsor5.jpg">
+    <img src="images/sponsor6.jpg">
+    <img src="images/sponsor7.jpg">
+    <img src="images/sponsor8.jpg">
+    <img src="images/sponsor9.jpg">
+    <img src="images/sponsor10.jpg">
+    <img src="images/sponsor11.jpg">
+    <img src="images/sponsor12.jpg">
+    <img src="images/sponsor13.jpg">
+    <img src="images/sponsor14.jpg">
+    <img src="images/sponsor15.jpg">
     
 </div>
 </div>
