--- a/lifemembers.html
+++ b/lifemembers.html
@@ -75,7 +75,7 @@ image5.src = "images/slide5.jpg"
     </div>   
 <div id="mainwrapper">
   <section id="maincontent">
-<section id="SideMenuBarLifeMembers">
+<section id="SideMenuBar">
 <br>
 <br>
 <a id="navButton" href="history.html">History</a><br>
@@ -88,132 +88,66 @@ image5.src = "images/slide5.jpg"
 	<!--CONTENT-->
     <h1>Life Members</h1>
     
- <div id="LmJacintaP">
    <h2> Jacinta Payne (Life Member since May 2015) </h2>
    
-  <img src="images/Life Members/jacinta-web.jpg" width="200" height="200" alt=""/>
+   <img src="images/Life Members/jacinta-web.jpg" width="280" height="280" alt=""/>
    
    <p> Jacinta has been part of the Orchestra from the beginning when she played 1st Clarinet at the first performance on Sunday, 29th October 2000. 
-She has been on the management committee and was a voluntary manager of the Orchestra.
-
-<script type="text/javascript">
- function showhide(id) {
-    var e = document.getElementById(id);
-    e.style.display = (e.style.display == 'block') ? 'none' : 'block';
- }
-</script>
-
-<a href="javascript:showhide('ReadMoreText1')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText1" style="display:none;">
- 
+She has been on the management committee and was a voluntary manager of the Orchestra. 
 Jacinta has had the task of being Rehearsal Conductor on many occasions and conducted a performance in 2004. 
 Over the years, through her teaching she has been able to encourage many players to join the Orchestra and has mentored many young woodwind players. </p>
 
-</div>
-</div>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<div id="LmAlenN">
 <h2> Alan Nixon (Life Member since May 2015)</h2>
 
-<img src="images/Life Members/alan-web.jpg" width="200" height="200" alt=""/>
+<img src="images/Life Members/alan-web.jpg" width="280" height="280" alt=""/>
 
 <p> Alan has been Secretary of North Queensland Ensembles Inc. /Barrier Reef Orchestra for eight years. 
-
-
- <a href="javascript:showhide('ReadMoreText2')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText2" style="display:none;">
-
 He is a former Commonwealth Government officer mainly in the Commonwealth Employment Service and prior to retirement he was the Department's Zone Manager for North Queensland. This expertise has served the Orchestra well as Alan has facilitated North Queensland Ensembles becoming incorporated and was also Secretary at the time when we employed our first Orchestra Manager. 
 Alan has a background in community service having been a member of both Australian Jaycees and Rotary. He has also had long experience as an actor, producer and Committee member with several little theatre groups across the State. </p>
 
-</div>
-</div>
+<br>
+<br>
 
-<div id="LmStephenF">
 <h2> Stephen Frewen-Lord (Life Member since May 2015)</h2>
 
-<img src="images/Life Members/stephen-web.jpg" width="200" height="200" alt=""/>
+<img src="images/Life Members/stephen-web.jpg" width="280" height="280" alt=""/>
 
-<p> Stephen has been involved with the Barrier Reef Orchestra since its inception; having played as concert master in the orchestra&rsquo;s inaugural concert in 2000.
-
-<a href="javascript:showhide('ReadMoreText3')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText3" style="display:none;">
-
-Since then, he has missed only a couple of Barrier Reef Orchestra concerts, and has been concert master for most concerts.<br>
+<p> Stephen has been involved with the Barrier Reef Orchestra since its inception; having played as concert master in the orchestra&rsquo;s inaugural concert in 2000. Since then, he has missed only a couple of Barrier Reef Orchestra concerts, and has been concert master for most concerts. <br>
    When not rehearsing with the BRO, Stephen is involved in a number of ensembles around Townsville. He manages and plays with the Melaleuca String Quartet, directed Strings Non Troppo, and plays in Double Play – a guitar/violin duo. Stephen has had regular involvement with the Mulkadee Arts Festival, and performs regularly in community events such as Eco Fiesta, Riverfest, Heritage Day and Stable on the Strand. <br>
    In his role as concert master over the past 15 years, Stephen has enjoyed many discussions with guest conductors concerning the artistic direction of the orchestra. As a string teacher, he has encouraged many young string players to become regular members of the orchestra. Stephen loves his involvement with the orchestra, and is delighted to be joined by young players who share his passion for music. Stephen is looking forward to passing on the baton to the next BRO concert master! </p>
    
-</div>
-</div>
-
-<div id="LmJennyC">
    <h2> Jenny Carr (Life Member since July 2010) </h2>
    
    <img src="images/Life Members/jenny-web.jpg" width="200" height="200" alt=""/>
    
-   <p> Jenny Carr came to Australia from Scotland in the early 70s and instantly became an integral part of the Townsville music scene as a pianist and instrumental music teacher. 
+   <p> Jenny Carr came to Australia from Scotland in the early 70s and instantly became an integral part of the Townsville music scene as a pianist and instrumental music teacher. In 1998 when the decision was made to establish a community orchestra, Jenny worked as librarian, performer and for many years as Manager . In conjunction with Donna McMahon and Susan Linge (from the Civic Theatre), they arranged a series of concerts for the emerging orchestra. She also played with the orchestra when a pianist was needed. As Manager, she was involved in all aspects of handling the orchestra's music and checking attendances. In later years, Jenny worked as Adjudicator’s Assistant for the Australian Vocal and Concerto Competition. </p>
    
-<a href="javascript:showhide('ReadMoreText4')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText4" style="display:none;"> 
-   
- In 1998 when the decision was made to establish a community orchestra, Jenny worked as librarian, performer and for many years as Manager . In conjunction with Donna McMahon and Susan Linge (from the Civic Theatre), they arranged a series of concerts for the emerging orchestra. She also played with the orchestra when a pianist was needed. As Manager, she was involved in all aspects of handling the orchestra's music and checking attendances. In later years, Jenny worked as Adjudicator’s Assistant for the Australian Vocal and Concerto Competition. </p>
-
-</div>
-</div>   
-  
- <div id="LmCarolD"> 
-  <h2> Carol Dall'Osto (Life Member since July 2010)</h2>
+   <h2> Carol Dall'Osto (Life Member since July 2010)</h2>
    
    <img src="images/Life Members/carol-web.jpg" width="200" height="200" alt=""/>
    
-   <p> Carol has been a leading figure in music performances in Townsville for many years despite living in Ingham until the early 2000s when she moved to Townsville.
-
-<a href="javascript:showhide('ReadMoreText5')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText5" style="display:none;">
+   <p> Carol has been a leading figure in music performances in Townsville for many years despite living in Ingham until the early 2000s when she moved to Townsville. Carol is a piano teacher, accompanist, and musical director of the Australian Concerto and Vocal Competition which she has led since 1991.She was involved with the others in the formation of the Barrier Reef Orchestra, and was chairperson of the North Queensland Ensembles Committee (the parent organization for the Orchestra), a position she held until 2003. </p>
    
- Carol is a piano teacher, accompanist, and musical director of the Australian Concerto and Vocal Competition which she has led since 1991.She was involved with the others in the formation of the Barrier Reef Orchestra, and was chairperson of the North Queensland Ensembles Committee (the parent organization for the Orchestra), a position she held until 2003. </p>
+   <br>
+   <br>
    
-</div>
-</div>   
    
-<div id="LmDonnaM">   
    <h2> Donna McMahon (Life Member since July 2010) </h2>
    
    <img src="images/Life Members/donna-web.jpg" width="200" height="200" alt=""/>
    
-   <p> Donna has been a leader in the Townsville music community since she arrived in 1973 fresh from the Conservatorium to teach strings for Education Queensland. 
-
-<a href="javascript:showhide('ReadMoreText6')">
-        Read More
-    </a>
-<!-- Javascript from W3 Schools Tutorial--->
-    <div id="ReadMoreText6" style="display:none;">
+   <p> Donna has been a leader in the Townsville music community since she arrived in 1973 fresh from the Conservatorium to teach strings for Education Queensland. Until 2009 she has also been involved with the Townsville Youth Orchestra, the Australian String Teachers’ Association, the Australian Concerto & Vocal Competition, and lately of course the Barrier Reef Orchestra. Apart from being one of the prime movers in the formation of the BRO, she has been performer, rehearsal conductor, musical advisor, & visiting conductor liaison. In 2009, she was rehearsal conductor, played with the orchestra, and managed the music library. She recently graduated with a Masters Degree in Music from James Cook University. </p>
    
-Until 2009 she has also been involved with the Townsville Youth Orchestra, the Australian String Teachers’ Association, the Australian Concerto & Vocal Competition, and lately of course the Barrier Reef Orchestra. Apart from being one of the prime movers in the formation of the BRO, she has been performer, rehearsal conductor, musical advisor, & visiting conductor liaison. In 2009, she was rehearsal conductor, played with the orchestra, and managed the music library. She recently graduated with a Masters Degree in Music from James Cook University. </p>
-   
- </div>
-</div>
-
-<div id="LmDavidP"> 
    <h2> David Pearse (Life Member since June 2006) </h2>
    
    <p>David was heavily involved with the Townsville music scene from the 1970s, including the formation of the BRO in 1999. He was made a Life Member by the Committee in June 2006, when he and his wife Elizabeth left Townsville to live in Canberra. </p>
-</div>  
+   
    </section>
 	</div>
     <footer>
