fixing sponsor images and changes in CSS

--- a/lifemembers.html
+++ b/lifemembers.html
@@ -88,7 +88,7 @@ image5.src = "images/slide5.jpg"
 	<!--CONTENT-->
     <h1>Life Members</h1>
     
- <div id="LmJacintaP">
+ <div id="paraClear">
    <h2> Jacinta Payne (Life Member since May 2015) </h2>
    
   <img src="images/Life Members/jacinta-web.jpg" width="200" height="200" alt=""/>
@@ -115,7 +115,7 @@ Over the years, through her teaching she has been able to encourage many players
 </div>
 </div>
 
-<div id="LmAlenN">
+<div id="paraClear">
 <h2> Alan Nixon (Life Member since May 2015)</h2>
 
 <img src="images/Life Members/alan-web.jpg" width="200" height="200" alt=""/>
@@ -135,7 +135,7 @@ Alan has a background in community service having been a member of both Australi
 </div>
 </div>
 
-<div id="LmStephenF">
+<div id="paraClear">
 <h2> Stephen Frewen-Lord (Life Member since May 2015)</h2>
 
 <img src="images/Life Members/stephen-web.jpg" width="200" height="200" alt=""/>
@@ -155,7 +155,7 @@ Since then, he has missed only a couple of Barrier Reef Orchestra concerts, and 
 </div>
 </div>
 
-<div id="LmJennyC">
+<div id="paraClear">
    <h2> Jenny Carr (Life Member since July 2010) </h2>
    
    <img src="images/Life Members/jenny-web.jpg" width="200" height="200" alt=""/>
@@ -173,7 +173,7 @@ Since then, he has missed only a couple of Barrier Reef Orchestra concerts, and 
 </div>
 </div>   
   
- <div id="LmCarolD"> 
+ <div id="paraClear"> 
   <h2> Carol Dall'Osto (Life Member since July 2010)</h2>
    
    <img src="images/Life Members/carol-web.jpg" width="200" height="200" alt=""/>
@@ -191,7 +191,7 @@ Since then, he has missed only a couple of Barrier Reef Orchestra concerts, and 
 </div>
 </div>   
    
-<div id="LmDonnaM">   
+<div id="paraClear">   
    <h2> Donna McMahon (Life Member since July 2010) </h2>
    
    <img src="images/Life Members/donna-web.jpg" width="200" height="200" alt=""/>
@@ -209,7 +209,7 @@ Until 2009 she has also been involved with the Townsville Youth Orchestra, the A
  </div>
 </div>
 
-<div id="LmDavidP"> 
+<div id="paraClear"> 
    <h2> David Pearse (Life Member since June 2006) </h2>
    
    <p>David was heavily involved with the Townsville music scene from the 1970s, including the formation of the BRO in 1999. He was made a Life Member by the Committee in June 2006, when he and his wife Elizabeth left Townsville to live in Canberra. </p>
