--- a/specialguests.html
+++ b/specialguests.html
@@ -88,7 +88,7 @@ image5.src = "images/slide5.jpg"
 	<!--CONTENT-->
    <h1>Special Guests</h1>
    
-<div id="SpMarkShiell"> 
+<div id="paraClear"> 
    <h2>Mark Shiell (Conductor)</h2> 
    
    <img src="images/markconducting.jpg" width="320" height="214" alt=""/>
@@ -115,7 +115,7 @@ Mark is also passionate about the education and training of future conductors, a
 </div>
 </div>
 
-<div id="SpAdamLopez">
+<div id="paraClear">
 <h2> Adam Lopez (Vocal) </h2>
 
 <img src="images/Adam-Lopez.jpg" width="179" height="250" alt=""/>
@@ -142,7 +142,7 @@ Adam Lopez has undoubtedly got one of the most fascinating vocal instruments on 
 </div>
 </div>
 
-<div id="SpDomenicoT">
+<div id="paraClear">
 <h2> Domenico Taraborrelli 
 (Accordion) </h2>
 
@@ -164,7 +164,7 @@ He has performed in many venues from QPAC with the Queensland Pops Orchestra to 
 </div>
 </div>
 
-<div id="SpDavidH">
+<div id="paraClear">
 <h2> David Hudson 
 (Musician, entertainer) </h2>
 
@@ -184,7 +184,7 @@ He performs a diverse range of musical styles from around the world and will be 
 </div>
 
 
-<div id="SpRaymondY">
+<div id="paraClear">
 <h2> Raymond Yong 
 (Conductor) </h2>
 
@@ -206,7 +206,7 @@ Raymond is also a sought-after piano soloist and accompanist. Concert highlights
 </div>
 </div>
 
-<div id="SpJenniferB">
+<div id="paraClear">
 <h2> Jennifer Bradstreet 
 (Flute) </h2>
 
@@ -228,7 +228,7 @@ In 2013, Jennifer accepted a Masters scholarship under James Kortum and Aldo Bae
 </div>
 </div>
 
-<div id="SpLeahL">
+<div id="paraClear">
 <h2> Leah Li 
 (Harp) </h2>
 
@@ -248,7 +248,7 @@ Leah‘s repertoire spans from the Baroque to the present day. She has a special
 </div>
 </div>
 
-<div id="SpRichardM">
+<div id="paraClear">
 <h2> Richard McIntyre, OAM, BMus (University of Sydney) 
 Conductor/Bassoonist </h2>
 
@@ -277,7 +277,7 @@ His 35-year career at the Canberra (now ANU) School of Music played a significan
 </div>
 
 
-<div id="SpMarioD">
+<div id="paraClear">
 <h2> Mario Dobernig 
 (Conductor) </h2>
 
@@ -298,7 +298,7 @@ In 2011, Mario conducted Stravinsky’s Histoire du Soldat for the Woodend Winte
 </div>
 </div>
 
-<div id="SpBronwynD">
+<div id="paraClear">
 <h2> Bronwyn Douglass 
 (Mezzo-soprano) </h2>
 
@@ -321,7 +321,7 @@ Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of t
 </div>
 </div>
 
-<div id="SpYoshikaM">
+<div id="paraClear">
 <h2> Yoshika Masuda 
 (Cello) </h2>
 
