--- a/gallery_slavonicswoon.html
+++ b/gallery_slavonicswoon.html
@@ -48,10 +48,28 @@
 	</div>
     </div>
     </header>
+    <div id="bannerwrapper" class="smallpage">
+    	<div id="bannerholder"><img src="images/slide1.jpg" id="banner" name="slide"></div>
+		<script type="text/javascript">
+		        var step=1;
+        		function slideit()
+        		{
+        		    document.images.slide.src = eval("image"+step+".src");
+        		    if(step<5)
+        		        step++;
+        		    else
+        		        step=1;
+        		    setTimeout("slideit()",2500);
+					
+					
+        		}
+        		slideit();
+		</script>
+    </div>
 	
 	<div id="mainwrapper">
 	<section id="maincontent">
-		<section id="SideMenuBar">
+		<section id="SideMenuBar" class="smallpage">
 		<h2>Gallery</h2>
 		<a href="gallery_instruments.html">Instruments</a><br>
 		<a href="gallery_hotsummernight.html">Hot summer nights</a><br>
@@ -64,7 +82,7 @@
 	<!--CONTENT-->
 	<br>
 	<h1>Slavonic Swoon</h1>
-    <table border="1px solid black" width="89%"><tr>
+    <table border="1px solid black" width="70%"><tr>
     <td><a href="gallery/slavonicswoon/gallery_slavonicswoon_00.jpg"><img src="gallery/slavonicswoon/tn_gallery_slavonicswoon_00.jpg"></a></td>
     <td><a href="gallery/slavonicswoon/gallery_slavonicswoon_01.jpg"><img src="gallery/slavonicswoon/tn_gallery_slavonicswoon_01.jpg"></a></td>
     </tr><tr>
