fixed the navbar on every page
fixed the navbar and fixed sponsor images on every page

--- a/gallery_hotsummernight.html
+++ b/gallery_hotsummernight.html
@@ -14,27 +14,27 @@
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Events</a>
+		<a  id="navButton" href="events.html">Events</a>
 		<div class="dropdown-content">
-			<a href="#">Upcoming events</a>
-			<a href="#">Past events</a>
-			<a href="#">Rehearsal schedule</a>
+			<a href="upcomingEvents.html">Upcoming events</a>
+			<a href="pastEvents.html">Past events</a>
+			<a href="rehearsal.html">Rehearsal schedule</a>
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Contact</a>
+		<a  id="navButton" href="contact.html">Contact</a>
 		<div class="dropdown-content">
-			<a href="#">Become a Member</a>
-			<a href="#">Become a Player</a>
-			<a href="#">Support Us</a>
+			<a href="contactform.html">Become a Member</a>
+			<a href="playerform.html">Become a Player</a>
+			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
     <div class="dropdown">
 		<a  id="navButton" href="aboutus.html">About us</a>
 		<div class="dropdown-content">
-			<a href="people.html">History</a>
-			<a href="contact.html">Special guests</a>
-			<a href="contact.html">Life members</a>
+			<a href="history.html">History</a>
+			<a href="specialguests.html">Special guests</a>
+			<a href="lifemembers.html">Life members</a>
 		</div>
 	</div>
     <div class="dropdown">
