--- a/history.html
+++ b/history.html
@@ -26,22 +26,22 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Events</a>
+		<a  id="navButton" href="events.html">Events</a>
 		<div class="dropdown-content">
-			<a href="#">Upcoming events</a>
-			<a href="#">Past events</a>
-			<a href="#">Rehearsal schedule</a>
+			<a href="upcomingEvents.html">Upcoming events</a>
+			<a href="pastEvents.html">Past events</a>
+			<a href="rehearsal.html">Rehearsal schedule</a>
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Contact</a>
+		<a  id="navButton" href="contact.html">Contact</a>
 		<div class="dropdown-content">
-			<a href="#">Become a Member</a>
-			<a href="#">Become a Player</a>
-			<a href="#">Support Us</a>
+			<a href="contactform.html">Become a Member</a>
+			<a href="playerform.html">Become a Player</a>
+			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
-   <div class="dropdown">
+    <div class="dropdown">
 		<a  id="navButton" href="aboutus.html">About us</a>
 		<div class="dropdown-content">
 			<a href="history.html">History</a>
@@ -50,11 +50,12 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="aboutus.html">Gallery</a>
+		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
 		<div class="dropdown-content">
-			<a href="people.html">History</a>
-			<a href="contact.html">Special guests</a>
-			<a href="contact.html">Life members</a>
+			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_hotsummernight.html">Hot summer nights</a>
+			<a href="gallery_lastnightofproms.html">Last night of proms</a>
+			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
 		</div>
 	</div>
     </div>
