--- a/rehearsal.html
+++ b/rehearsal.html
@@ -3,12 +3,6 @@
 <head>
   <title>Bootstrap Example</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  
-  
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
 <title>Barrier Reef Orchestra - home</title>
@@ -36,19 +30,19 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Events</a>
+		<a  id="navButton" href="events.html">Events</a>
 		<div class="dropdown-content">
-			<a href="#">Upcoming events</a>
-			<a href="#">Past events</a>
-			<a href="#">Rehearsal schedule</a>
+			<a href="upcomingEvents.html">Upcoming events</a>
+			<a href="pastEvents.html">Past events</a>
+			<a href="rehearsal.html">Rehearsal schedule</a>
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Contact</a>
+		<a  id="navButton" href="contact.html">Contact</a>
 		<div class="dropdown-content">
-			<a href="#">Become a Member</a>
-			<a href="#">Become a Player</a>
-			<a href="#">Support Us</a>
+			<a href="contactform.html">Become a Member</a>
+			<a href="playerform.html">Become a Player</a>
+			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
     <div class="dropdown">
@@ -60,7 +54,12 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="aboutus.html">Gallery</a>
+		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
+		<div class="dropdown-content">
+			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_hotsummernight.html">Hot summer nights</a>
+			<a href="gallery_lastnightofproms.html">Last night of proms</a>
+			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
 	</div>
     </div>
     </header>
@@ -196,19 +195,22 @@ Sally - 0402 823 710 or 4774 6804 or sally.frew@hotmail.com
     <div id="footerBkg">
 	
 	<div id="sponsors">
-    <br>
-    
-    <img src="images/sponsor1.jpg"height="50"width="50">
-    <img src="images/sponsor2.jpg"height="50"width="50">
-	<img src="images/sponsor3.jpg"height="50"width="50">
-    <img src="images/sponsor4.jpg"height="50"width="50">
-    <img src="images/sponsor5.jpg"height="50"width="50">
-    <img src="images/sponsor6.jpg"height="50"width="50">
-    <img src="images/sponsor7.jpg"height="50"width="50">
-    <img src="images/sponsor8.jpg"height="50"width="50">
-    <img src="images/sponsor9.jpg"height="50"width="50">
-    <img src="images/sponsor10.jpg"height="50"width="50">
-    <img src="images/sponsor11.jpg"height="50"width="50">
+    <h1>Sponsors:</h1>
+    <img src="images/sponsor1.jpg">
+    <img src="images/sponsor2.jpg">
+	<img src="images/sponsor3.jpg">
+    <img src="images/sponsor4.jpg">
+    <img src="images/sponsor5.jpg">
+    <img src="images/sponsor6.jpg">
+    <img src="images/sponsor7.jpg">
+    <img src="images/sponsor8.jpg">
+    <img src="images/sponsor9.jpg">
+    <img src="images/sponsor10.jpg">
+    <img src="images/sponsor11.jpg">
+    <img src="images/sponsor12.jpg">
+    <img src="images/sponsor13.jpg">
+    <img src="images/sponsor14.jpg">
+    <img src="images/sponsor15.jpg">
     
 </div>
 </div>
