fixed typo in navbar
fixed a link in the navbar

--- a/rehearsal.html
+++ b/rehearsal.html
@@ -54,7 +54,7 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
+		<a  id="navButton" href="gallery_instruments.html">Gallery</a>
 		<div class="dropdown-content">
 			<a href="gallery_instruments.html">Instruments</a>
 			<a href="gallery_hotsummernight.html">Hot summer nights</a>
