--- a/gallery_slavonicswoon.html
+++ b/gallery_slavonicswoon.html
@@ -38,7 +38,7 @@
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="gallery_instuments.html">Gallery</a>
+		<a  id="navButton" href="gallery_instruments.html">Gallery</a>
 		<div class="dropdown-content">
 			<a href="gallery_instruments.html">Instruments</a>
 			<a href="gallery_hotsummernight.html">Hot summer nights</a>
