--- a/becomeplayer.html
+++ b/becomeplayer.html
@@ -4,14 +4,7 @@
   <title>Become a Player</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  
-  
-<meta charset="utf-8">
-<link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
-<title>Barrier Reef Orchestra - home</title>
+<title>Become a player</title>
 <script type="text/javascript">
 var image1 = new Image()
 image1.src = "images/slide1.jpg"
@@ -36,19 +29,19 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Events</a>
+		<a  id="navButton" href="events.html">Events</a>
 		<div class="dropdown-content">
-			<a href="#">Upcoming events</a>
-			<a href="#">Past events</a>
-			<a href="#">Rehearsal schedule</a>
+			<a href="upcomingEvents.html">Upcoming events</a>
+			<a href="pastEvents.html">Past events</a>
+			<a href="rehearsal.html">Rehearsal schedule</a>
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="#">Contact</a>
+		<a  id="navButton" href="contact.html">Contact us</a>
 		<div class="dropdown-content">
-			<a href="#">Become a Member</a>
-			<a href="#">Become a Player</a>
-			<a href="#">Support Us</a>
+			<a href="becomemember.html">Become a Member</a>
+			<a href="becomeplayer.html">Become a Player</a>
+			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
     <div class="dropdown">
@@ -60,11 +53,16 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="aboutus.html">Gallery</a>
+		<a  id="navButton" href="gallery_instruments.html">Gallery</a>
+		<div class="dropdown-content">
+			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_hotsummernight.html">Hot summer nights</a>
+			<a href="gallery_lastnightofproms.html">Last night of proms</a>
+			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
 	</div>
     </div>
     </header>
-    <div id="bannerwrapper">
+    <div id="bannerwrapper" class="smallpage">
     	<div id="bannerholder"><img src="images/slide1.jpg" id="banner" name="slide"></div>
 		<script type="text/javascript">
 		        var step=1;
@@ -85,7 +83,11 @@ image5.src = "images/slide5.jpg"
 	
 <div id="mainwrapper">
   <section id="maincontent">
-<section id="SideMenuBar">
+<section id="SideMenuBar" class="smallpage">
+	<h1><a href="contact.html">Contact us</a></h1>
+	<a href="becomemember.html">Become a Member</a><br>
+	Become a Player<br>
+	<a href="supportus.html">Support Us</a><br><br>
   <!-- Facebook Plugin-->
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </section>
@@ -178,19 +180,22 @@ We look forward to getting in touch as soon as we can!</p>
     <div id="footerBkg">
 	
 	<div id="sponsors">
-    <br>
-    
-    <img src="images/sponsor1.jpg"height="50"width="50">
-    <img src="images/sponsor2.jpg"height="50"width="50">
-	<img src="images/sponsor3.jpg"height="50"width="50">
-    <img src="images/sponsor4.jpg"height="50"width="50">
-    <img src="images/sponsor5.jpg"height="50"width="50">
-    <img src="images/sponsor6.jpg"height="50"width="50">
-    <img src="images/sponsor7.jpg"height="50"width="50">
-    <img src="images/sponsor8.jpg"height="50"width="50">
-    <img src="images/sponsor9.jpg"height="50"width="50">
-    <img src="images/sponsor10.jpg"height="50"width="50">
-    <img src="images/sponsor11.jpg"height="50"width="50">
+    <h1>Sponsors:</h1>
+    <img src="images/sponsor1.jpg">
+    <img src="images/sponsor2.jpg">
+	<img src="images/sponsor3.jpg">
+    <img src="images/sponsor4.jpg">
+    <img src="images/sponsor5.jpg">
+    <img src="images/sponsor6.jpg">
+    <img src="images/sponsor7.jpg">
+    <img src="images/sponsor8.jpg">
+    <img src="images/sponsor9.jpg">
+    <img src="images/sponsor10.jpg">
+    <img src="images/sponsor11.jpg">
+    <img src="images/sponsor12.jpg">
+    <img src="images/sponsor13.jpg">
+    <img src="images/sponsor14.jpg">
+    <img src="images/sponsor15.jpg">
     
 </div>
 </div>
