--- a/gallery_lastnightofproms.html
+++ b/gallery_lastnightofproms.html
@@ -22,10 +22,10 @@
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="contact.html">Contact</a>
+		<a  id="navButton" href="contact.html">Contact us</a>
 		<div class="dropdown-content">
-			<a href="contactform.html">Become a Member</a>
-			<a href="playerform.html">Become a Player</a>
+			<a href="becomemember.html">Become a Member</a>
+			<a href="becomeplayer.html">Become a Player</a>
 			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
