--- a/rehearsal.html
+++ b/rehearsal.html
@@ -38,10 +38,10 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="contact.html">Contact</a>
+		<a  id="navButton" href="contact.html">Contact us</a>
 		<div class="dropdown-content">
-			<a href="contactform.html">Become a Member</a>
-			<a href="playerform.html">Become a Player</a>
+			<a href="becomemember.html">Become a Member</a>
+			<a href="becomeplayer.html">Become a Player</a>
 			<a href="supportus.html">Support Us</a>
 		</div>
 	</div>
