one small change to header of become player page

--- a/becomeplayer.html
+++ b/becomeplayer.html
@@ -94,7 +94,7 @@ image5.src = "images/slide5.jpg"
 <section id="ContentText">
 	<!--CONTENT-->
 	
-    <h2 class="content-head is-center">Contact Us!</h2>
+    <h2 class="content-head is-center">Become a Player!</h2>
   <aside>
        <p>
           Interested in Playing in the Orchestra?</p>
