Uploading event pages
added past events and upcoming events
added events images
changed rehearsal schedule page

--- a/rehearsal.html
+++ b/rehearsal.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Rehearsal schedule</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
 <meta charset="utf-8">
-<link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
-<title>Barrier Reef Orchestra - home</title>
+<title>Barrier Reef Orchestra - Rehearsal schedule</title>
 <script type="text/javascript">
 var image1 = new Image()
 image1.src = "images/slide1.jpg"
@@ -30,7 +29,7 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="events.html">Events</a>
+		<a  id="navButton" href="upcomingEvents.html">Events</a>
 		<div class="dropdown-content">
 			<a href="upcomingEvents.html">Upcoming events</a>
 			<a href="pastEvents.html">Past events</a>
@@ -63,7 +62,7 @@ image5.src = "images/slide5.jpg"
 	</div>
     </div>
     </header>
-    <div id="bannerwrapper">
+    <div id="bannerwrapper" class="smallpage">
     	<div id="bannerholder"><img src="images/slide1.jpg" id="banner" name="slide"></div>
 		<script type="text/javascript">
 		        var step=1;
@@ -84,7 +83,11 @@ image5.src = "images/slide5.jpg"
 	
 <div id="mainwrapper">
   <section id="maincontent">
-<section id="SideMenuBar">
+<section id="SideMenuBar" class="smallpage">
+	<h1><a href="upcomingevents.html">Events</a></h1>
+	<a href="upcomingevents.html">Upcoming events</a><br>
+	<a href="pastevents.html">Past events</a><br>
+	Rehearsal schedule<br><br>
   <!-- Facebook Plugin-->
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </section>
@@ -183,9 +186,9 @@ NOVEMBER CONCERT – REHEARSAL SCHEDULE as of 13 September
 If you are ever unable to make a rehearsal, please contact me:
 <br>
 Sally - 0402 823 710 or 4774 6804 or sally.frew@hotmail.com
-
+<br><br><br><br><br>
     
-
+	</section>
     </div>
     </section>
     </section>
