Updating all pages
fixed the navbar to add event pages
fixed padding on content for small browsers
made the logo link to the home page

--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@ image5.src = "images/slide5.jpg"
 <body>
 	<header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -79,6 +79,7 @@ image5.src = "images/slide5.jpg"
 		</script>
     </div>   
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar">
 <br>
