--- a/pastevents.html
+++ b/pastevents.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Rehearsal schedule</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
 <meta charset="utf-8">
-<title>Barrier Reef Orchestra - Rehearsal schedule</title>
+<title>Barrier Reef Orchestra - Past events</title>
 <script type="text/javascript">
 var image1 = new Image()
 image1.src = "images/slide1.jpg"
@@ -23,7 +22,7 @@ image5.src = "images/slide5.jpg"
 
 <header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -80,16 +79,16 @@ image5.src = "images/slide5.jpg"
         		slideit();
 		</script>
     </div>
-	
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
-<section id="SideMenuBar" class="smallpage">
+<section id="SideMenuBar">
 	<h1><a href="upcomingevents.html">Events</a></h1>
 	<a href="upcomingevents.html">Upcoming events</a><br>
 	Past events<br>
 	<a href="rehearsal.html">Rehearsal schedule</a><br><br>
   <!-- Facebook Plugin-->
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" class="smallpage"></iframe>
 </section>
 <section id="ContentText">
 	<!--CONTENT-->
