--- a/becomeplayer.html
+++ b/becomeplayer.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Become a Player</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
   <meta charset="utf-8">
-<title>Become a player</title>
+<title>Barrier Reef Orchestra - Become a player</title>
 <script type="text/javascript">
 var image1 = new Image()
 image1.src = "images/slide1.jpg"
@@ -23,7 +22,7 @@ image5.src = "images/slide5.jpg"
 
 <header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -82,6 +81,7 @@ image5.src = "images/slide5.jpg"
     </div>
 	
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
 	<h1><a href="contact.html">Contact us</a></h1>
