--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ image5.src = "images/slide5.jpg"
 
 <header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -82,6 +82,7 @@ image5.src = "images/slide5.jpg"
     </div>
 	
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
 	<h1><a href="contact.html">Contact us</a></h1>
