--- a/gallery_lastnightofproms.html
+++ b/gallery_lastnightofproms.html
@@ -3,12 +3,26 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
-<title>Barrier Reef Orchestra - home</title>
+<title>Barrier Reef Orchestra - gallery</title>
+<script type="text/javascript">
+var image1 = new Image()
+image1.src = "images/slide1.jpg"
+var image2 = new Image()
+image2.src = "images/slide2.jpg"
+var image3 = new Image()
+image3.src = "images/slide3.jpg"
+var image4 = new Image()
+image4.src = "images/slide4.jpg"
+var image5 = new Image()
+image5.src = "images/slide5.jpg"
+</script>
+  
 </head>
 <body>
-	<header>
+
+<header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -68,6 +82,7 @@
     </div>
 	
 	<div id="mainwrapper">
+  <div id="pagepadding">.</div>
 	<section id="maincontent">
 		<section id="SideMenuBar" class="smallpage">
 		<h2>Gallery</h2>
