--- a/lifemembers.html
+++ b/lifemembers.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
-<title>Barrier Reef Orchestra - about us</title>
+<title>Barrier Reef Orchestra - life members</title>
 <script type="text/javascript">
 var image1 = new Image()
 image1.src = "images/slide1.jpg"
@@ -20,7 +20,7 @@ image5.src = "images/slide5.jpg"
 <body>
 	<header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -79,6 +79,7 @@ image5.src = "images/slide5.jpg"
 		</script>
     </div>   
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
 	<h1>About us</h1>
