--- a/rehearsal.html
+++ b/rehearsal.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Rehearsal schedule</title>
   <link rel="stylesheet" href="styles/mainstyle.css" type="text/css">
 <meta charset="utf-8">
 <title>Barrier Reef Orchestra - Rehearsal schedule</title>
@@ -23,7 +22,7 @@ image5.src = "images/slide5.jpg"
 
 <header>
     <!--HEADER-->
-    <div id="logo"> <img src="images/logo.png"></div>
+    <div id="logo"> <a href="index.html"><img src="images/logo.png"></a></div>
     <div id="navwrapper">
 	<div class="dropdown">
     	<a id="navButton" href="index.html">Home</a>
@@ -82,6 +81,7 @@ image5.src = "images/slide5.jpg"
     </div>
 	
 <div id="mainwrapper">
+  <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
 	<h1><a href="upcomingevents.html">Events</a></h1>
