Changed about us pages - Yuvi
added images and finalized about us pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="events.html">Events</a>
+		<a  id="navButton" href="upcomingEvents.html">Events</a>
 		<div class="dropdown-content">
 			<a href="upcomingEvents.html">Upcoming events</a>
 			<a href="pastEvents.html">Past events</a>
@@ -82,11 +82,10 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar">
-<br>
-<br>
-<a id="navButton" href="history.html">History</a><br>
-<br><a id="navButton" href="specialguests.html">Special Guests</a><br>
-<br><a id="navButton" href="lifemembers.html">Life Members</a><br>
+	<h1><a href="aboutus.html">About us</a></h1>
+	<a href="history.html">History</a><br>
+	<a href="specialguests.html">Special guests</a><br>
+	<a href="lifemembers.html">Life members</a><br>
 </section>
     
     
@@ -100,6 +99,9 @@ image5.src = "images/slide5.jpg"
 
 	<p>In 2015 the orchestra has been invited to perform in three festivals, and features in the Townsville Civic Theatre season. This is a first for the orchestra - underscoring its value to the community and highlighting its continued prominence in the cultural soundscape of North Queensland. </p>
    
+   
+   <img src="images/aboutus1.jpg" style="float: none; align: left;">
+   </section>
    </section>
 	</div>
     <footer>
