--- a/history.html
+++ b/history.html
@@ -28,7 +28,7 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="events.html">Events</a>
+		<a  id="navButton" href="upcomingEvents.html">Events</a>
 		<div class="dropdown-content">
 			<a href="upcomingEvents.html">Upcoming events</a>
 			<a href="pastEvents.html">Past events</a>
@@ -84,7 +84,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1>About us</h1>
+	<h1><a href="aboutus.html">About us</a></h1>
 	History<br>
 	<a href="specialguests.html">Special guests</a><br>
 	<a href="lifemembers.html">Life members</a><br>
@@ -101,6 +101,7 @@ image5.src = "images/slide5.jpg"
     <h1>History</h1>
    <p>History of the Orchestra 
 Over a two-year period in the late nineties, Townsville musicians, arts workers and a group of people who had a love for music realised the potential for developing a community-based Orchestra — one that would flourish and become an integral part of the City’s cultural life. <br><br>
+<img src="images/aboutus2.jpg" style="float: none; align: left;"><br><br>
 
 In 2000 to ‘test’ the viability of establishing an Orchestra a weekend workshop was arranged and musicians were invited to participate under the baton of Richard McIntyre, Senior Lecturer at the Canberra School of Music and the result — the Barrier Reef Orchestra was born. 
 During the past few years, the Orchestra has performed with the comedy-duo Scared Weird Little Guys in Score, Townsville City Council’s Last Night of the Proms and A Christmas Carol. In 2003 the Council’s centenary year the Orchestra took part in Encore, as well as playing a major role in the Townsville Civic Theatre’s 25th Anniversary productions of Noye’s Fludde and Carmina Burana. <br><br>
