--- a/specialguests.html
+++ b/specialguests.html
@@ -26,7 +26,7 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="events.html">Events</a>
+		<a  id="navButton" href="upcomingEvents.html">Events</a>
 		<div class="dropdown-content">
 			<a href="upcomingEvents.html">Upcoming events</a>
 			<a href="pastEvents.html">Past events</a>
@@ -82,7 +82,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1>About us</h1>
+	<h1><a href="aboutus.html">About us</a></h1>
 	<a href="history.html">History</a><br>
 	Special guests<br>
 	<a href="lifemembers.html">Life members</a><br>
