--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -84,7 +84,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1>>Events</h1>
+	<h1>Events</h1>
 	Upcoming events<br>
 	<a href="pastevents.html">Past events</a><br>
 	<a href="rehearsal.html">Rehearsal schedule</a><br><br>
