--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ image5.src = "images/slide5.jpg"
     	<a id="navButton" href="index.html">Home</a>
     </div>
     <div class="dropdown">
-		<a  id="navButton" href="events.html">Events</a>
+		<a  id="navButton" href="upcomingEvents.html">Events</a>
 		<div class="dropdown-content">
 			<a href="upcomingEvents.html">Upcoming events</a>
 			<a href="pastEvents.html">Past events</a>
@@ -92,7 +92,10 @@ image5.src = "images/slide5.jpg"
 	<h2>Upcoming events</h2>
     <img src="images/image1.jpg" style="float:right">
 	<p>
-    <ul><li> 
+    <ul>
+    <li>
+    <strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong></li>
+    <li> 
 7th May (Saturday)
 <br>-	Annual General Meeting </li>
 <li>July 17th (Sunday)
@@ -124,7 +127,7 @@ image5.src = "images/slide5.jpg"
 	<br/>
 	<br/>
 
-		<a href="BecomeAMember.html">Sign Up Sheet</a>
+		<a href="becomemember.html">Sign Up Sheet</a>
 	<br/>
 	<br/>
 	<br/>
