fixed about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@ image5.src = "images/slide5.jpg"
 	</div>
     </div>
     </header>
-    <div id="bannerwrapper">
+    <div id="bannerwrapper" class="smallpage">
     	<div id="bannerholder"><img src="images/slide1.jpg" id="banner" name="slide"></div>
 		<script type="text/javascript">
 		        var step=1;
@@ -81,11 +81,13 @@ image5.src = "images/slide5.jpg"
 <div id="mainwrapper">
   <div id="pagepadding">.</div>
   <section id="maincontent">
-<section id="SideMenuBar">
+<section id="SideMenuBar" class="smallpage">
 	<h1><a href="aboutus.html">About us</a></h1>
 	<a href="history.html">History</a><br>
 	<a href="specialguests.html">Special guests</a><br>
 	<a href="lifemembers.html">Life members</a><br>
+  <!-- Facebook Plugin-->
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </section>
     
     
