small tweaks by whole team

--- a/gallery_instruments.html
+++ b/gallery_instruments.html
@@ -52,9 +52,9 @@ image5.src = "images/slide5.jpg"
 		</div>
 	</div>
     <div class="dropdown">
-		<a  id="navButton" href="gallery_instruments.html">Gallery</a>
+		<a  id="navButton" href="gallery_Instruments.html">Gallery</a>
 		<div class="dropdown-content">
-			<a href="gallery_instruments.html">Instruments</a>
+			<a href="gallery_Instruments.html">Instruments</a>
 			<a href="gallery_hotsummernight.html">Hot summer nights</a>
 			<a href="gallery_lastnightofproms.html">Last night of proms</a>
 			<a href="gallery_slavonicswoon.html">Slavonic swoon</a>
@@ -99,49 +99,49 @@ image5.src = "images/slide5.jpg"
 	<h1>Instruments</h1>
     
     <table border="1px solid black" width="70%"><tr>
-    <td><a href="gallery/instruments/gallery_instruments_00.jpg"><img src="gallery/instruments/tn_gallery_instruments_00.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_01.jpg"><img src="gallery/instruments/tn_gallery_instruments_01.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_00.jpg"><img src="gallery/instruments/tn_gallery_Instruments_00.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_01.jpg"><img src="gallery/instruments/tn_gallery_Instruments_01.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_02.jpg"><img src="gallery/instruments/tn_gallery_instruments_02.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_03.jpg"><img src="gallery/instruments/tn_gallery_instruments_03.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_02.jpg"><img src="gallery/instruments/tn_gallery_Instruments_02.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_03.jpg"><img src="gallery/instruments/tn_gallery_Instruments_03.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_04.jpg"><img src="gallery/instruments/tn_gallery_instruments_04.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_05.jpg"><img src="gallery/instruments/tn_gallery_instruments_05.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_04.jpg"><img src="gallery/instruments/tn_gallery_Instruments_04.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_05.jpg"><img src="gallery/instruments/tn_gallery_Instruments_05.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_06.jpg"><img src="gallery/instruments/tn_gallery_instruments_06.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_07.jpg"><img src="gallery/instruments/tn_gallery_instruments_07.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_06.jpg"><img src="gallery/instruments/tn_gallery_Instruments_06.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_07.jpg"><img src="gallery/instruments/tn_gallery_Instruments_07.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_08.jpg"><img src="gallery/instruments/tn_gallery_instruments_08.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_09.jpg"><img src="gallery/instruments/tn_gallery_instruments_09.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_08.jpg"><img src="gallery/instruments/tn_gallery_Instruments_08.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_09.jpg"><img src="gallery/instruments/tn_gallery_Instruments_09.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_10.jpg"><img src="gallery/instruments/tn_gallery_instruments_10.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_11.jpg"><img src="gallery/instruments/tn_gallery_instruments_11.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_10.jpg"><img src="gallery/instruments/tn_gallery_Instruments_10.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_11.jpg"><img src="gallery/instruments/tn_gallery_Instruments_11.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_12.jpg"><img src="gallery/instruments/tn_gallery_instruments_12.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_13.jpg"><img src="gallery/instruments/tn_gallery_instruments_13.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_12.jpg"><img src="gallery/instruments/tn_gallery_Instruments_12.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_13.jpg"><img src="gallery/instruments/tn_gallery_Instruments_13.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_14.jpg"><img src="gallery/instruments/tn_gallery_instruments_14.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_15.jpg"><img src="gallery/instruments/tn_gallery_instruments_15.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_14.jpg"><img src="gallery/instruments/tn_gallery_Instruments_14.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_15.jpg"><img src="gallery/instruments/tn_gallery_Instruments_15.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_16.jpg"><img src="gallery/instruments/tn_gallery_instruments_16.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_17.jpg"><img src="gallery/instruments/tn_gallery_instruments_17.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_16.jpg"><img src="gallery/instruments/tn_gallery_Instruments_16.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_17.jpg"><img src="gallery/instruments/tn_gallery_Instruments_17.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_18.jpg"><img src="gallery/instruments/tn_gallery_instruments_18.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_19.jpg"><img src="gallery/instruments/tn_gallery_instruments_19.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_18.jpg"><img src="gallery/instruments/tn_gallery_Instruments_18.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_19.jpg"><img src="gallery/instruments/tn_gallery_Instruments_19.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_20.jpg"><img src="gallery/instruments/tn_gallery_instruments_20.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_21.jpg"><img src="gallery/instruments/tn_gallery_instruments_21.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_20.jpg"><img src="gallery/instruments/tn_gallery_Instruments_20.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_21.jpg"><img src="gallery/instruments/tn_gallery_Instruments_21.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_22.jpg"><img src="gallery/instruments/tn_gallery_instruments_22.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_23.jpg"><img src="gallery/instruments/tn_gallery_instruments_23.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_22.jpg"><img src="gallery/instruments/tn_gallery_Instruments_22.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_23.jpg"><img src="gallery/instruments/tn_gallery_Instruments_23.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_24.jpg"><img src="gallery/instruments/tn_gallery_instruments_24.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_25.jpg"><img src="gallery/instruments/tn_gallery_instruments_25.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_24.jpg"><img src="gallery/instruments/tn_gallery_Instruments_24.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_25.jpg"><img src="gallery/instruments/tn_gallery_Instruments_25.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_26.jpg"><img src="gallery/instruments/tn_gallery_instruments_26.jpg"></a></td>
-    <td><a href="gallery/instruments/gallery_instruments_27.jpg"><img src="gallery/instruments/tn_gallery_instruments_27.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_26.jpg"><img src="gallery/instruments/tn_gallery_Instruments_26.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_27.jpg"><img src="gallery/instruments/tn_gallery_Instruments_27.jpg"></a></td>
     </tr><tr>
-    <td><a href="gallery/instruments/gallery_instruments_28.jpg"><img src="gallery/instruments/tn_gallery_instruments_28.jpg"></a></td>
+    <td><a href="gallery/instruments/gallery_Instruments_28.jpg"><img src="gallery/instruments/tn_gallery_Instruments_28.jpg"></a></td>
     <td></td>
     </tr></table>
 	</section>
