--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-  <!-- Facebook Plugin-->
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" ></iframe>
+  <!-- Facebook Plugin - https://developers.facebook.com/docs/plugins/page-plugin -->
+
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" height="400" style="width:100%; border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" ></iframe>
 
 </section>
 <section id="ContentText">
 	<!--CONTENT-->
 	<h1>News</h1>
 	<h2>Upcoming events</h2>
+    <strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong>
     <img src="images/image1.jpg" style="float:right">
 	<p>
     <ul>
-    <li>
-    <strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong></li>
     <li> 
 7th May (Saturday)
 <br>-	Annual General Meeting </li>
